# LeetcodeAIPythonPractice

./: LICENSE  PROMPT.md  README.md  load_exercise.py  pyproject.toml  test_main.py
exercises/convex_hull_trees/: main.py  test_main.py
exercises/order_list/: main.py  test_main.py
